# jag

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: USING-JAG.md
src/: agent.rs  client.rs  commands.rs  commit.rs  graph.rs  index.rs  journal.rs  main.rs  model.rs  nl.rs  objects.rs  protocol.rs  reconcile.rs  refs.rs  remote.rs  repo.rs  server.rs  status.rs  sync.rs  tree.rs  web.rs  worktree.rs
src/web/: index.html
tests/: concurrent.rs  network.rs
