[package]
name = "jag"
version = "0.1.0"
edition = "2021"
description = "Just Another Git — agent-first version control for concurrent multi-agent workflows"
license = "MIT"
repository = "https://github.com/mnguyen36/jag"

[[bin]]
name = "jag"
path = "src/main.rs"

# Natural-language front-end: `jags <plain english>` -> forwards to jag's NL.
[[bin]]
name = "jags"
path = "src/bin/jags.rs"

[dependencies]
sha2 = "0.10"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
# Networking: a tiny blocking HTTP server + client for the local jag server.
# ureq's default TLS/gzip features are off — local sync speaks plain HTTP.
tiny_http = "0.12"
ureq = { version = "2", default-features = false }

[profile.release]
lto = true
codegen-units = 1
